[package]
name = "zyghost-com"
version = "0.0.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
console_log = "0.1.2"
log = "0.4"
markdown = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[dependencies.mogwai]
#git = "https://github.com/schell/mogwai.git"
path = "../mogwai/mogwai"

[dependencies.web-sys]
version = "0.3"
# Add more web-sys API's as you need them
features = [
  "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
