[package]
name = "zyghost-com"
version = "0.1.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
mdbook = "0.4"
mdbook-toc = "0.14"
mdbook-variables = "0.2.4"
